--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@headlessui/react": "^2.2.1",
     "@heroicons/react": "^2.2.0",
     "@reduxjs/toolkit": "^2.2.5",
     "@tanstack/react-query": "^5.67.1",
@@ -16,7 +19,8 @@
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
-    "framer-motion": "^12.0.5",
+    "emoji-picker-react": "^4.12.2",
+    "framer-motion": "^12.7.3",
     "https-browserify": "^1.0.0",
     "idb": "^8.0.2",
     "lucide-react": "^0.474.0",
@@ -24,11 +28,12 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
+    "react-live-clock": "^6.1.25",
     "react-query": "^3.39.3",
-    "react-redux": "^9.1.2",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.23.1",
     "react-spinners": "^0.15.0",
-    "react-toastify": "^10.0.5",
+    "react-toastify": "^10.0.6",
     "redux-persist": "^6.0.0",
     "socket.io-client": "^4.8.1",
     "stream-browserify": "^3.0.0",
@@ -64,6 +69,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "react-scripts": "^5.0.1",
     "tailwindcss": "^3.4.3",
     "webpack": "^5.98.0",
