--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,8 +5,9 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@headlessui/react": "^2.2.1",
+    "@headlessui/react": "^2.2.2",
     "@heroicons/react": "^2.2.0",
+    "@radix-ui/react-dialog": "^1.1.10",
     "@reduxjs/toolkit": "^2.2.5",
     "@tanstack/react-query": "^5.67.1",
     "@tanstack/react-query-persist-client": "^5.67.1",
@@ -15,7 +16,9 @@
     "@testing-library/user-event": "^13.5.0",
     "assert": "^2.1.0",
     "axios": "^1.8.1",
+    "bootstrap": "^5.3.5",
     "browserify-zlib": "^0.2.0",
+    "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
@@ -26,6 +29,7 @@
     "lucide-react": "^0.474.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-live-clock": "^6.1.25",
@@ -38,6 +42,7 @@
     "socket.io-client": "^4.8.1",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
+    "tailwind-merge": "^3.2.0",
     "timeago.js": "^4.0.2",
     "url": "^0.11.4",
     "util": "^0.12.5",
@@ -70,8 +75,10 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@tailwindcss/line-clamp": "^0.4.4",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
     "react-scripts": "^5.0.1",
-    "tailwindcss": "^3.4.3",
+    "tailwindcss": "^3.4.17",
     "webpack": "^5.98.0",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.0"
