--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.4.7",
     "emoji-picker-react": "^4.12.2",
     "framer-motion": "^12.7.3",
+    "http-proxy-middleware": "^2.0.9",
     "https-browserify": "^1.0.0",
     "idb": "^8.0.2",
     "lucide-react": "^0.474.0",
