--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node --max-old-space-size=5124 index.js",
+    "start": "node index.js",
     "dev": "nodemon index.js"
   },
   "author": "",
