--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,23 +1,31 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Node modules
+node_modules/
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
+# Build output
+# build/
 
-# testing
-/coverage
-
-# production
-/build
-
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
+# Logs
 npm-debug.log*
 yarn-debug.log*
-yarn-error.log*
+pnpm-debug.log*
+
+# React cache
+.cache/
+.eslintcache
+
+# Public static artifacts cache
+public/static/
+
+# OS junk
+.DS_Store
+Thumbs.db
+
+# Environment
+.env
+.env.*.local
+
+# Misc
+*.log
+*.pid
+*.tgz
+*.seed
