--- a/package.json
+++ b/package.json
@@ -1,23 +1,13 @@
 {
   "dependencies": {
-    "@tanstack/react-query-persist-client": "^5.67.1",
-    "assert": "^2.1.0",
-    "axios": "^1.8.1",
-    "browserify-zlib": "^0.2.0",
-    "https-browserify": "^1.0.0",
-    "idb": "^8.0.2",
-    "react-scripts": "^5.0.1",
-    "serve": "^14.2.4",
-    "socket.io": "^4.8.1",
-    "stream-browserify": "^3.0.0",
-    "stream-http": "^3.2.0",
-    "url": "^0.11.4",
-    "util": "^0.12.5"
+    "serve": "^14.2.4"
   },
   "devDependencies": {
     "react-app-rewired": "^2.2.1"
   },
   "scripts": {
+    "install-all": "npm install --prefix frontend && npm install --prefix backend",
+    "build": "npm run build --prefix frontend",
     "start": "node server.js"
   }
 }
