--- a/backend/package.json
+++ b/backend/package.json
@@ -7,8 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "dev": "nodemon index.js",
-      "build": "cd frontend && npm install && npm run build"
+    "dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
