--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,9 @@
     "test": "react-scripts test --watchAll=false",
     "eject": "react-scripts eject"
   },
+  
+    "homepage": "/",
+
   "eslintConfig": {
     "extends": [
       "react-app",
