--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,7 @@
 MONGODB_URI = mongodb+srv://bmxii:123456789$bmxii@bm12.qdh9mrh.mongodb.net/BM12-Section?retryWrites=true&w=majority&appName=BM12
 TOKEN_SECRET_KEY = "ASDFLKJ0219bmxii123456789BM12"
 FRONTEND_URL = http://localhost:3000
+GOOGLE_CLIENT_ID=984765947708-mid1462q20ee1n76n6p5omjb8enfg3gd.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+MAIL_USER=secxionxii@gmail.com
+MAIL_PASS=glft svun kmux wahk
