--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-          "build": "cd ../frontend && npm install && npm run build && cp -r build ../backend/build",
+    "build": "cd ../frontend && npm install && npm run build && cp -r build ../backend/build",
     "start": "node index.js",
     "dev": "nodemon index.js"
   },
@@ -27,7 +27,11 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.12.0",
+    "nodemailer": "^7.0.3",
     "nodemon": "^3.1.3",
-    "request-ip": "^3.3.0"
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
+    "request-ip": "^3.3.0",
+    "uuid": "^11.1.0"
   }
 }
