--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,9 @@
     "framer-motion": "^12.11.0",
     "lucide-react": "^0.510.0",
     "moment": "^2.30.1",
+    "nodemailer": "^7.0.3",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
@@ -37,9 +40,7 @@
     "test": "react-scripts test --watchAll=false",
     "eject": "react-scripts eject"
   },
-  
-    "homepage": "/",
-
+  "homepage": "/",
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -57,5 +58,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "file-loader": "^6.2.0"
   }
 }
