--- a/backend/.env
+++ b/backend/.env
@@ -5,3 +5,5 @@ GOOGLE_CLIENT_ID=984765947708-mid1462q20ee1n76n6p5omjb8enfg3gd.apps.googleuserco
 GOOGLE_CLIENT_SECRET=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
 MAIL_USER=secxionxii@gmail.com
 MAIL_PASS=glft svun kmux wahk
+PAYSTACK_SECRET_KEY=sk_test_c7b1f189926ae5f3c472cc965339a6166d1b9498
+
