--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,7 +32,11 @@
     "react-spinners": "^0.17.0",
     "react-toastify": "^11.0.5",
     "redux-persist": "^6.0.0",
-    "web-vitals": "^3.1.1"
+    "web-vitals": "^3.1.1",
+    "workbox-core": "^7.3.0",
+    "workbox-precaching": "^7.3.0",
+    "workbox-routing": "^7.3.0",
+    "workbox-strategies": "^7.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
