--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,19 +13,23 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
-    "axios": "^1.6.0",
+    "axios": "^1.9.0",
+    "chart.js": "^4.4.9",
     "date-fns": "^4.1.0",
     "emoji-picker-react": "^4.12.2",
     "framer-motion": "^12.11.0",
+    "html5-qrcode": "^2.3.8",
     "lucide-react": "^0.510.0",
     "moment": "^2.30.1",
     "nodemailer": "^7.0.3",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-live-clock": "^6.1.25",
+    "react-qr-scanner": "^1.0.0-alpha.11",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
@@ -33,10 +37,12 @@
     "react-toastify": "^11.0.5",
     "redux-persist": "^6.0.0",
     "web-vitals": "^3.1.1",
+    "web3": "^4.16.0",
     "workbox-core": "^7.3.0",
     "workbox-precaching": "^7.3.0",
     "workbox-routing": "^7.3.0",
-    "workbox-strategies": "^7.3.0"
+    "workbox-strategies": "^7.3.0",
+    "zod": "^3.25.32"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -51,6 +57,7 @@
       "react-app/jest"
     ]
   },
+  "proxy": "http://localhost:5000",
   "browserslist": {
     "production": [
       ">0.2%",
