--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@floating-ui/react": "^0.27.11",
+    "@floating-ui/react-dom": "^2.1.3",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@headlessui/react": "^2.2.3",
@@ -26,7 +28,9 @@
     "passport-google-oauth20": "^2.0.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-live-clock": "^6.1.25",
     "react-qr-scanner": "^1.0.0-alpha.11",
