--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "cd ../frontend && npm install && npm run build && cp -r build ../backend/build",
+"build": "cd ../frontend && npm run build ...",
     "start": "node index.js",
     "dev": "nodemon index.js"
   },
