--- a/package.json
+++ b/package.json
@@ -1,28 +1,15 @@
 {
   "name": "mernx",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "private": true,
   "scripts": {
+    "build": "cd frontend && npm install && npm run build && cp -r build ../backend/build",
     "start": "cd backend && npm start",
-    "client": "cd frontend && npm start",
-    "server": "cd backend && npm run dev",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "build": "cd frontend && npm install && npm run build"
+    "client": "cd frontend && npm start",
+    "server": "cd backend && npm run dev"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/secxion/secxionx.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/secxion/secxionx/issues"
-  },
-  "homepage": "https://github.com/secxion/secxionx#readme",
   "dependencies": {
-    "concurrently": "^9.1.2",
-    "pip": "^0.0.1"
+    "concurrently": "^9.1.2"
   }
 }
