--- a/package.json
+++ b/package.json
@@ -2,9 +2,7 @@
   "name": "secxion",
   "version": "1.0.0",
   "scripts": {
-    "install": "cd backend && npm install",
-    "build": "cd frontend && npm install && npm run build",
-    "start": "cd backend && npm start"
+    "start": "cd backend && npm run build && npm start"
   },
   "dependencies": {
     "concurrently": "^9.1.2"
