--- a/backend/package.json
+++ b/backend/package.json
@@ -6,8 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-"build": "cd ../frontend && npm run build ...",
-    "start": "node index.js",
+    "build": "cd ../frontend && npm install && npm run build && cp -r build ../backend/",
+        "start": "node index.js",
     "dev": "nodemon index.js"
   },
   "author": "",
