--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,6 @@
     "@headlessui/react": "^2.2.3",
     "@heroicons/react": "^2.2.0",
     "@reduxjs/toolkit": "^2.8.1",
-    "@tailwindcss/line-clamp": "^0.4.4",
     "@tanstack/react-query": "^5.76.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.0.0",
@@ -56,7 +55,7 @@
     "test": "react-scripts test --watchAll=false",
     "eject": "react-scripts eject",
     "refactor:routes": "node refactorRoutes.js",
-  "refactor:revert": "node refactorRoutes.js revert"
+    "refactor:revert": "node refactorRoutes.js revert"
   },
   "homepage": "/",
   "eslintConfig": {
@@ -78,6 +77,9 @@
     ]
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "@tailwindcss/typography": "^0.5.16",
     "file-loader": "^6.2.0"
   }
 }
