--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.9.0",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.6.0",
+    "compression": "^1.8.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
@@ -34,7 +35,9 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "request-ip": "^3.3.0",
+    "socket.io": "^4.8.1",
     "uuid": "^11.1.0",
+    "winston": "^3.17.0",
     "xss-clean": "^0.1.4"
   }
 }
