--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,9 @@
     "@headlessui/react": "^2.2.3",
     "@heroicons/react": "^2.2.0",
     "@reduxjs/toolkit": "^2.8.1",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-query": "^5.76.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.0.0",
@@ -18,6 +21,7 @@
     "chart.js": "^4.4.9",
     "date-fns": "^4.1.0",
     "emoji-picker-react": "^4.12.2",
+    "file-loader": "^6.2.0",
     "framer-motion": "^12.11.0",
     "html5-qrcode": "^2.3.8",
     "lucide-react": "^0.510.0",
@@ -47,11 +51,7 @@
     "workbox-precaching": "^7.3.0",
     "workbox-routing": "^7.3.0",
     "workbox-strategies": "^7.3.0",
-    "zod": "^3.25.32",
-    "@tailwindcss/line-clamp": "^0.4.4",
-    "@tailwindcss/forms": "^0.5.10",
-    "@tailwindcss/typography": "^0.5.16",
-    "file-loader": "^6.2.0"
+    "zod": "^3.25.32"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -79,8 +79,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-   
   }
 }
